# Examples

./: .gitignore  CMakeLists.txt
First_CMake/: CMakeLists.txt
First_CMake/Subdirectories/: CMakeLists.txt
First_CMake/Subdirectories/lib1/: CMakeLists.txt
First_CMake/Subdirectories/lib1/inc/: lib.hpp
First_CMake/Subdirectories/lib1/src/: file.cpp
First_CMake/Subdirectories/prog1/: CMakeLists.txt
First_CMake/Subdirectories/prog1/src/: prog1.cpp
First_CMake/Subdirectories/prog2/: CMakeLists.txt
First_CMake/Subdirectories/prog2/src/: file.cpp
Project/: CMakeLists.txt
Project/Boost_JSON/: .gitignore  CMakeLists.txt  read_json.cpp  write_json.cpp  write_read_json.cpp
Project/Boost_JSON/examples/: test2.json  test3.json
Project/customer/: CMakeLists.txt  Customer.cpp  Customer.hpp  Customer_for_JSON.cpp  Customer_for_JSON.hpp
Project/socket/: CMakeLists.txt
Project/socket/client_customer/: CMakeLists.txt  client_customer.cpp  client_server_customer.cpp  send_receive.cpp  send_receive.hpp  server_customer.cpp
Project/socket/run_client_instances/: run_client_instances.cpp
Project/socket/server/: socket_example_server.cpp
Project/socket/socket_customer/: client_customer.cpp  server_customer.cpp  socket_tools.cpp  socket_tools.hpp
Project/socket/test_socket/: blocking_tcp_echo_client.cpp  blocking_tcp_echo_server.cpp  socket_tools.hpp  test_socket.cpp
Project/test_wxWidgets/: CMakeLists.txt  My_new_Customer_dialog.cpp  My_new_Customer_dialog.hpp  example_of_use.cpp  example_of_use.hpp  myapp.cpp
Project/thread/: CMakeLists.txt
TP/: CMakeLists.txt
TP/TP2/: CMakeLists.txt
TP/TP2/TP2_1/: CMakeLists.txt  TP2_1.cpp
TP/TP2/TP2_2/: CMakeLists.txt  TP2_2.cpp
TP/TP2/TP2_3/: CMakeLists.txt  TP2_3.cpp
TP/TP3/: CMakeLists.txt
TP/TP3/TP3_2/: CMakeLists.txt  TP3_2.cpp  TP3_2.hpp  main.cpp
corrigés/: CMakeLists.txt
corrigés/DS_2022/: .gitignore  CMakeLists.txt  DS_2022.cpp
corrigés/interrogation_2021/: CMakeLists.txt  interrogation_2021.cpp
various/: CMakeLists.txt
various/Dog_and_cat/: CMakeLists.txt  Dog_and_cat.cpp  Dog_and_cat.hpp  main.cpp
various/TP/: CMakeLists.txt
various/TP/TP2/TP2_1/: CMakeLists.txt
various/TP/TP2/TP2_2/: CMakeLists.txt
various/TP/TP2/TP2_3/: TP2_3.cpp
various/copy_constructor/: CMakeLists.txt
various/copy_constructor/C/: CMakeLists.txt
various/copy_constructor/C++/: CMakeLists.txt
various/copy_constructor/C++/inc/: copy_constructor.hpp
various/copy_constructor/C++/src/: copy_constructor.cpp  main.cpp
various/copy_constructor/C/inc/: copy_constructor.h
various/copy_constructor/C/src/: copy_constructor.c  main.c
various/new_and_realloc/: CMakeLists.txt  new_and_realloc.cpp
various/pointer_to_pointer_allocation/: CMakeLists.txt  pointer_to_pointer_allocation.c
various/read_a_char/: CMakeLists.txt  read_a_char.c
